# potd-wallpaper

./: Cargo.toml  README.md
src/: gnu_linux.rs  macos.rs  main.rs  path.rs
